{
    "name": "PlayerMap",
    "maps": [
        {
            "name": "Player",
            "id": "7359e12b-3e53-4289-acb1-c51073d3c64b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "29e5bfff-d4bc-4efa-8961-0ef9d5bafea9",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "1f991b3f-24c7-4723-83e9-abacc36ffae0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "09657aa2-fbfb-4bd2-a774-88725c623497",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "89b3862c-34ca-4668-a714-203519ee5939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "0a84f5f3-cb77-4f0a-8560-26ad80e7968a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c42282e-6111-4efa-8ef7-f1922e60f54a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "091e4d4c-5a88-4ba3-ab59-9fb900e5d4e5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7f5017f-9fa4-4b25-809a-4589996c41af",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2358c36e-f369-44cc-b9fb-88a1496fc245",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65c108c8-4809-44e2-b727-9d35ec36e4df",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}